# neural_terrain

./: .gitignore  CMakeLists.txt  README.md
Neural_Terrain/: main.cpp
data/: xor.net
data/neural_networks/layer1/: NN_layer1_best2_sym.txt
src/: data_container.cpp  data_container.h  importer.cpp  importer.h  main.cpp
